# ros-bridge

PythonAPI/examples/: automatic_control.py  data_csv.csv  manual_control.py  no_rendering_mode.py  out.txt  test_carla_waypoint.py  test_carla_waypoint2.py
carla_find_lane_line/: CMakeLists.txt  package.xml
carla_find_lane_line/src/: carla_image_processing.cpp  carla_image_processing11.cpp
carla_ros_bridge/launch/: carla_ros_bridge.launch.py
carla_spawn_objects/config/: objects.json
carla_trajectory_tracking/: CMakeLists.txt  package.xml
carla_trajectory_tracking/src/: base_waypoints.txt  carla_tracking_cmd.cpp  out.txt  subscrib_to_base_waypoints.cpp  trajectory_following.cpp  waypoint_updater.cpp  waypoints_loader.cpp
carla_trajectory_tracking/src/KDTree-master/: KDTree.cpp
carla_trajectory_tracking/src/data_ref/: base_waypoints.txt  current_pose.txt  final_waypoint_ref.txt  test.txt
carla_vehicle_trajectory/: package.xml  setup.cfg  setup.py
carla_vehicle_trajectory/PythonAPI/examples/: test_carla.py
carla_vehicle_trajectory/carla_vehicle_trajectory/: draw_target_trajectory.py
